src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import '~@angular/material/prebuilt-themes/indigo-pink.css';

html, body {
  padding: 0;
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

.router-wrapper {
  margin-top: 70px;
}

.content-wrapper {
  margin: 0 auto;
  max-width: 1200px;
}

.fill-space,
.fill-remaining-space {
  flex: 1 1 auto;
}

:focus {
  outline: none;
}

